fixed the hyphen behavior